# claude-code-cli

./: .dockerignore  .env.example  Dockerfile  README.fr.md  README.md  claude-install-macos.spec  docker-compose.yml  pyproject.toml
claude_code_internal/: __init__.py  config.py  logging_config.py
claude_code_internal/client/: agent.py
claude_code_internal/client/installers/: _base.py  linux.py  macos.py  windows.py
claude_code_internal/servers/: auth.py  install_server.py  llm_gateway.py
claude_code_internal/tools/: mirror_claude_code.py
legacy/: client_agent.py  install_linux.py  install_macos.py  install_windows.py  server_auth.py  server_install_server.py  server_llm_gateway.py  server_mirror_claude_code.py
